--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,6 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
@@ -12,10 +10,11 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-2">
+      <div class="footer-col footer-col-3">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
+            GitHub: 
             <a href="https://github.com/{{ site.github_username }}">
               <span class="icon icon--github">
                 <svg viewBox="0 0 16 16">
@@ -30,6 +29,7 @@
 
           {% if site.twitter_username %}
           <li>
+            Twitter:
             <a href="https://twitter.com/{{ site.twitter_username }}">
               <span class="icon icon--twitter">
                 <svg viewBox="0 0 16 16">
@@ -38,15 +38,11 @@
                 </svg>
               </span>
 
-              <span class="username">{{ site.twitter_username }}</span>
+              <span class="username">@{{ site.twitter_username }}</span>
             </a>
           </li>
           {% endif %}
         </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
       </div>
     </div>
 
