Tweak HTTP for Nginx+Unifi

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,10 @@ layout: default
         </h2>
 
         {{ post.excerpt }}
+
+        <p>
+          <a href="{{ post.url | relative_url }}">Read more...</a>
+        </p>
       </li>
     {% endfor %}
   </ul>
